--- a/frontend/src/pages/Dashboard.module.css
+++ b/frontend/src/pages/Dashboard.module.css
@@ -51,8 +51,9 @@
 }
 .form{
     background: #FFFFFF80;
-    padding: 4rem;
-    
+    padding: 2rem;
+    box-sizing: border-box;
+    width: 13rem;
     position: relative;
 }
 .formDeleteIcon{
