--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,10 +6,20 @@ body{
     font-family: "Open Sans", serif;
     /* width: 100vw;
     height: 100vh; */
-    background-color: black;
-    color: white;
+    /* background-color: black;
+    color: white; */
 
 }
+body.light {
+    background-color: #ffffff;
+    color: #000000;
+  }
+  
+  body.dark {
+    background-color: #121212;
+    color: #ffffff;
+  }
+  
 .container{
     width: 100vw;
     height: 100vh;
