--- a/frontend/src/pages/Workspace.module.css
+++ b/frontend/src/pages/Workspace.module.css
@@ -1,10 +1,10 @@
 .container {
   background-color: #1f1f23;
   
-  /* width: 100vw;
-  height: 100vh; */
+  width: 100vw;
+  height: 100vh;
 }
-.body{
+.flowBody{
     padding:  1rem;
     display: flex;
    
